Clase 2 Miercoles Finalización

--- a/DMEjemploMVVM/AppShell.xaml
+++ b/DMEjemploMVVM/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="DMEjemploMVVM.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:DMEjemploMVVM"
+    xmlns:local="clr-namespace:DMEjemploMVVM.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="DMEjemploMVVM">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate local:LibrosPage}"
         Route="MainPage" />
 
 </Shell>
